--- a/tethysapp/crazysearch/templates/crazysearch/base.html
+++ b/tethysapp/crazysearch/templates/crazysearch/base.html
@@ -128,6 +128,7 @@
     var geoServerLayer = "{{ geoLayer|safe }}";
     var geoServerColor = "{{ geoColor|safe }}";
     var geoServerWidth = "{{ geoWidth|safe }}";
+    var geoServerMovement = {{geoMovement|yesno:"true,false"}};
 
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" type="text/javascript"></script>
