UI change to have a div fo the took bar

--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -197,7 +197,9 @@
     word-break: break-all;
     margin-left: 5%;
 }
-
+#buttonsBar{
+  margin-left: 10%;
+}
 
 #pop-up_description2 {
   display: flex;
