--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -8,6 +8,7 @@
 
 <br>
 
+<img id="GeneralLoading" class="view-file hidden" src="{% static 'crazysearch/images/loader.gif' %}" />
 
 <div class="accordion" id="groups_hydroservers">
   <button class="btn btn-primary btn-lg btn-block">HydroServers</button>
@@ -27,6 +28,7 @@
   <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo"> </button>
   <br>
   <div class="panel-group" id="current-Groupservers" role="tablist" aria-multiselectable="true"></div>
+
   <!-- <div class="card">
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0" style= "width:120%">
