Added to center the loading gif of the add hydroserver modal

--- a/tethysapp/crazysearch/templates/crazysearch/modals/addHydroserver.html
+++ b/tethysapp/crazysearch/templates/crazysearch/modals/addHydroserver.html
@@ -23,7 +23,9 @@
                 <div id="chk_val" name="chk_val"></div>
                 <div class="warning">
                 </div>
-                <img id="soapAddLoading" class="view-file hidden" src="{% static 'crazysearch/images/loader.gif' %}" />
+                <div id="addSoapIdCentering">
+                  <img id="soapAddLoading" class="view-file hidden" src="{% static 'crazysearch/images/loader.gif' %}" />
+                </div>
             </div>
             <div class="modal-footer">
                 <div class="button-group">
