Center the loading icon

--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -38,9 +38,10 @@ tr:hover {
   height: 20%;
   width: auto;
 }
+
 #addSoapIdCentering{
   display: flex;
-  align-content: center;
+  justify-content:center;
 
 }
 
